# fastapi-practice

./: .dockerignore  .gitignore  compose.yaml  dockerfile  pyproject.toml  pytest.ini  requirements.txt  worker.py
alembic/: env.py
app/: main.py  settings.py
app/auth/: connector.py  dependency.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/core/: database.py  dependencies.py  exceptions.py  repo.py  security.py  singleton.py
app/project/: dependencies.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/request_test/: handlers.py  schema.py  service.py
app/tasks/: celery.py  tasks.py
app/users/: dependencies.py  handlers.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py
tests/database/: test_db_auth.py  test_db_project.py  test_db_user.py
tests/handlers/: test_handlers_auth.py  test_handlers_project.py  test_handlers_user.py
tests/service/: test_service_auth.py  test_service_project.py  test_service_request.py  test_service_user.py
